apps/kopic/dev/lobby/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kopic-dev-lobby
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kopic-dev-lobby
  template:
    metadata:
      labels:
        app: kopic-dev-lobby
    spec:
      containers:
      - name: kopic-dev-lobby
        image: ghcr.io/mohyeonman/kopic-lobby-k3s
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 300m
            memory: 1Gi
          limits:
            memory: 3Gi
