apps/kopic/dev/lobby/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kopic-dev-lobby
  labels:
    app: kopic-dev-lobby
spec:
  type: ClusterIP
  selector:
    app: kopic-dev-lobby
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kopic-dev-lobby-headless
  labels:
    app: kopic-dev-lobby
spec:
  clusterIP: None
  selector:
    app: kopic-dev-lobby
  ports:
  - name: http
    port: 8080
    targetPort: 8080
